<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login_Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#333"
        android:textSize="15dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTextRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:hint="@string/email"
        android:id="@+id/emailEditTextRegister"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/password"
        android:id="@+id/passwordEditTextRegister"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="textPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/verifyPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/verify_password"
        android:id="@+id/verifyPasswordEditText"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegister"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/verifyPasswordEditText"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"/>
    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/loginTextView"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        android:text="@string/you_have_account_click_here_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>